--- a/FE/package.json
+++ b/FE/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "flowbite": "^2.3.0",
     "jwt-decode": "^4.0.0",
     "vue": "^3.4.15",
     "vue-router": "^4.3.0",
@@ -21,6 +22,6 @@
     "postcss": "^8.4.35",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11"
+    "vite": "^5.2.4"
   }
 }
